--- a/package.json
+++ b/package.json
@@ -1,35 +1,61 @@
 {
-  "name": "erkanerdemnet",
-  "description": "Personal website of Erkan Erdem",
-  "author": {
-    "name": "Erkan Erdem",
-    "email": "erkan@erkanerdem.ner"
-  },
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "axios": "^1.7.9",
-    "lucide-react": "^0.453.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.5"
-  },
-  "devDependencies": {
-    "@types/node": "^22.13.1",
-    "@types/react": "^18.3.6",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.6"
-  }
+    "name": "erkanerdem.net",
+    "description": "Personal website of Erkan Erdem",
+    "author": {
+        "name": "Erkan Erdem",
+        "email": "erkan@erkanerdem.net"
+    },
+    "private": true,
+    "version": "1.0.0",
+    "type": "commonjs",
+    "scripts": {
+        "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+        "dev:frontend": "vite",
+        "dev:backend": "cross-env NODE_ENV=development nodemon --exec ts-node --files server/index.ts",
+        "build": "tsc && vite build",
+        "build:backend": "tsc -p tsconfig.node.json",
+        "serve": "vite preview",
+        "start": "node dist/server/index.js",
+        "prisma:generate": "prisma generate",
+        "prisma:push": "prisma db push",
+        "prisma:studio": "prisma studio"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.10.0",
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
+        "lucide-react": "^0.475.0",
+        "multer": "^1.4.5-lts.1",
+        "mysql2": "^3.9.1",
+        "prisma": "^5.10.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.1",
+        "sharp": "^0.33.5",
+        "slugify": "^1.6.6",
+        "uuid": "^11.1.0"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.5",
+        "@types/multer": "^1.4.12",
+        "@types/node": "^20.11.19",
+        "@types/react": "^18.2.55",
+        "@types/react-dom": "^18.2.19",
+        "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.17",
+        "concurrently": "^8.2.2",
+        "cross-env": "^7.0.3",
+        "nodemon": "^3.1.9",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3",
+        "vite": "^5.1.3"
+    }
 }
